daemonset-basic.yml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: monitoring-pod
spec:
  selector:
    matchLabels:
      app: monitoring-agent
  template:
    metadata:
      name: hellowcow
      labels:
        app: monitoring-agent
    spec:
      containers:
      - name: monitoring-agent
        image: kongraphael/myawesomemonitoringagent
