pod-basic.yml
apiVersion: v1
# Kind of object : here a pod
kind: Pod
# Metadata of the pod, such as name, and labels
metadata:
  name: hellocow
  labels:
    app: myapp
    env: staging
# Spec for pod
spec:
# Volume that may be used in the pod
# Here, 2 kinds : local fs and nfs
  volume:
  - name: "hellocow-tmp"
    hostPath:
     path: "/tmp/"
  - name: "hellocow-data"
    hostPath:
     path: "/var/lib/hellocow"
  - name: "hellocow-data-common"
    nfs:
     server: localhost
     path: "/exports"
# Container part : array of one or more container
  containers:
  - name: hellocow
    image: kongraphael/hellocow:1.0
    ports:
    - name: hellocowPort 
      containerPort: 3000
      protocol: TCP
# resources are defined container by container
    resources:
      limits:
        memory: "100Mi"
        cpu: "100m"
      requests:
        cpu: "50m"
        memory: "85Mi"
# Volumes mounted in container
    volumeMounts:
      - name: "hello-tmp"
        mountPath: /tmp
      - name: "hellocow-data-common"
        mountPath: "/var/lib/hellocow"
